Updated readme to include spring boot execution